--- a/css/home.css
+++ b/css/home.css
@@ -11,7 +11,8 @@
     background-color: rgba(0, 0, 0, 0.486);
     border-radius: 10px;
 }
-.app h1 {
+.app h1, h4{
+    padding-bottom: 10px;
     color: rgb(226,226,266);
     text-align: center;
     font-family: 'Poppins', sans-serif;
