--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,4 @@
-.app div {
+.home div {
 
     width: 90%;
     height: 80%;
@@ -11,7 +11,7 @@
     background-color: rgba(0, 0, 0, 0.486);
     border-radius: 10px;
 }
-.app h1, h4{
+.home h1, h4{
     padding-bottom: 10px;
     color: rgb(226,226,266);
     text-align: center;
