--- a/css/navbar.css
+++ b/css/navbar.css
@@ -6,6 +6,10 @@
 body {
     background-color: rgb(13, 39, 39);
 }
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 .img-area{
     background-image: url("../assets/bg.jpg");
     -webkit-background-size: cover;
@@ -84,7 +88,7 @@ body {
             right: 0px;
             height:95vh;
             top: 5vh;
-            background-color: rgba(0, 0, 0, 0.4);
+            background-color: rgba(0, 0, 0, 0.7);
             display: flex;
             flex-direction: column;
             align-items: center;
