--- a/css/home.css
+++ b/css/home.css
@@ -1,19 +1,101 @@
-.home div {
+* {
+    margin: 0;
+    padding:0; 
+}
 
-    width: 90%;
-    height: 80%;
+/*Welcome*/
+.home {
+    background-color: transparent;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 50px;
-    margin-top: 30px;
-    background-color: rgba(0, 0, 0, 0.486);
+    width: 100%;
+    height: 95vh;
+    top: 5vh;
     border-radius: 10px;
 }
-.home h1, h4{
-    padding-bottom: 10px;
-    color: rgb(226,226,266);
-    text-align: center;
+.home .welcome {
+    background-color: rgba(0, 0, 0, 0.486);
+    border: 1px solid rgb(68, 68, 68);
+    border-radius: 7.5px;
+    width: 50%;
+    padding: 1vh;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+    margin-left: auto;
+    margin-right: auto;
+}
+.home .welcome h1{
+    color: white;
     font-family: 'Poppins', sans-serif;
+    text-align: center;
+    font-size: 22px;
+}
+.home .welcome h4{
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    font-size: 15px;
+}
+
+
+
+/*Shop*/
+.home .shop {
+    background-color: rgba(0, 0, 0, 0.486);
+    border: 1px solid rgb(68, 68, 68);
+    border-radius: 7.5px;
+    height: 40vh;
+    width: 90%;
+    margin-top: 23vh;
+    margin-bottom: 2vh;
+    margin-left: auto;
+    margin-right: auto;
+}
+.home .shop h1 {
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 20px;
+}
+.home .shop .product {
+    background-color: rgba(34, 34, 34, 0.377);
+    border: 1px solid rgb(68, 68, 68);
+    border-radius: 7.5px;
+    height: 20%;
+    margin-bottom: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+/*Responsive*/
+@media screen and (max-width: 1024px){
+    /*Welcome*/
+    .home .welcome {
+        width: 65%;
+    }
+    .home .welcome h4{
+        font-size: 12px;
+    }
+    .home .welcome h1{
+        font-size: 17px;
+    }
+    /*Shop*/
+    .home .shop {
+        margin-top: 28vh;
+    }
+}
+@media screen and (max-width: 768px){
+    /*Welcome*/
+    .home .welcome {
+        width: 80%;
+    }
+    /*Shop*/
+    .home .shop {
+        margin-top: 18vh;
+        height: 65vh;
+    }
+    .home .shop .product {
+        height: 21%;
+    }
 }
