--- a/css/home.css
+++ b/css/home.css
@@ -12,28 +12,13 @@
     top: 5vh;
     border-radius: 10px;
 }
-.home .welcome {
-    background-color: rgba(0, 0, 0, 0.486);
-    border: 1px solid rgb(68, 68, 68);
-    border-radius: 7.5px;
-    width: 50%;
-    padding: 1vh;
-    margin-top: 2vh;
-    margin-bottom: 2vh;
-    margin-left: auto;
-    margin-right: auto;
-}
-.home .welcome h1{
+
+.logged-out h4 {
     color: white;
     font-family: 'Poppins', sans-serif;
     text-align: center;
-    font-size: 22px;
-}
-.home .welcome h4{
-    color: white;
-    font-family: 'Poppins', sans-serif;
-    text-align: center;
-    font-size: 15px;
+    margin-top: 10%;
+    font-size: 20px;
 }
 
 
@@ -45,7 +30,7 @@
     border-radius: 7.5px;
     height: 40vh;
     width: 90%;
-    margin-top: 23vh;
+    margin-top: 30vh;
     margin-bottom: 2vh;
     margin-left: auto;
     margin-right: auto;
@@ -53,9 +38,6 @@
 .home .shop h1 {
     color: white;
     font-family: 'Poppins', sans-serif;
-    text-align: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
     font-size: 20px;
 }
 .home .shop .product {
@@ -67,9 +49,75 @@
     margin-left: 10px;
     margin-right: 10px;
 }
-
+.content {
+    height: 100%;
+    display: flex;
+}
+.text {
+    display: block;
+    width: 100%;
+    max-width: 50%;
+    list-style: none;
+}
+.text h1{
+    text-align: left;
+    width: auto;
+    margin-left: 15px;
+    margin-top: 12px;
+}
+.text h4 {
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    margin-left: 15px;
+}
+.button {
+    width: 100%;
+    text-align: right;
+}
+.button button {
+    margin-right: 30px;
+    top: 30%;
+    border-radius: 5px;
+    background: transparent;
+    border: none;
+    outline: none;
+    padding: 8px 16px;
+    line-height: 1.25;
+    background: rgb(41, 122, 122);
+    color: rgb(226,226,266);
+    position: relative;
+    text-decoration: none;
+    font-size: 14px;
+    transition: background-color 0.6s ease;
+    overflow: hidden;
+}
+.button button:after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    top: 50%;
+    left: 50%;
+    transform-style: flat;
+    transform: translate3d(-50%, -50%, 0);
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 100%;
+    transition: width 0.3s ease, height 0.3s ease;
+}
+.button button:focus, .button button:hover {
+    background: rgb(61, 160, 160);
+}
+.button button:active:after {
+    width: 200px;
+    height: 200px;
+}
 /*Responsive*/
 @media screen and (max-width: 1024px){
+    .text h1{
+        margin-top: 20px;
+    }
     /*Welcome*/
     .home .welcome {
         width: 65%;
@@ -94,8 +142,5 @@
     .home .shop {
         margin-top: 18vh;
         height: 65vh;
-    }
-    .home .shop .product {
-        height: 21%;
     }
 }
