--- a/css/login.css
+++ b/css/login.css
@@ -26,13 +26,46 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 50px;
-    background: rgba(0,0,0,0.8);
-    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.486);
+    border: 1px solid rgb(68, 68, 68);
+    border-radius: 7.5px;
 }
 .main_div{
     width: 100%;
     height: 100vh;
     position: relative;
+}
+.nav {
+    background-color: rgba(0, 0, 0, 0.486);
+    font-family: 'Poppins', sans-serif;
+    height: 5vh;
+}
+.nav div {
+    width: min-content;
+    height: 100%;
+    display: flex;
+}
+.nav i {
+    height: 3px;
+    margin-top: 25px;
+    border: solid rgb(226,226,266);
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+    margin-left: 10px;
+}
+.nav a {
+    text-decoration: none;
+}
+.nav h1 {
+    color: rgb(226,226,266);
+    font-family: 'Poppins', sans-serif;
+    width: min-content;
+    height: 100%;
+    padding-top: 15px;
+    font-size: 20px;
 }
 .box h1 {
     margin-bottom: 30px;
@@ -126,8 +159,13 @@ body {
         left: 50%;
         transform: translate(-50%, -50%);
         padding: 50px;
-        background: rgba(0,0,0,0.8);
         border-radius: 10px;
+    }
+    .nav h1 {
+        padding-top: 0.8vh
+    }
+    .nav i {
+        margin-top: 17px;
     }
 }
 
