--- a/css/home.css
+++ b/css/home.css
@@ -22,6 +22,51 @@
 }
 
 
+.popup {
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding-top: 100px
+}
+.popup-content {
+    margin: auto;
+    width: 70%;
+    background-color: rgba(0, 0, 0, 0.486);
+    border: 1px solid rgb(68, 68, 68);
+    border-radius: 7.5px;
+    display: flex;
+    padding: 10px;
+}
+.popup-content .text {
+    width: 100%;
+} 
+.popup-content .text h4 {
+    text-align: center;
+    margin-top: 2%;
+}
+.popup-content .btn {
+    margin-left: 20px;
+    text-align: right;
+    align-items: center;
+}
+.btn button {
+    margin-top: 8px;
+    margin-right: 10px;
+    border-radius: 5px;
+    background: transparent;
+    border: none;
+    outline: none;
+    padding: 8px 16px;
+    line-height: 1.25;
+    background: rgb(41, 122, 122);
+    color: rgb(226,226,266);
+    text-decoration: none;
+    font-size: 14px;
+    transition: background-color 0.6s ease;
+    overflow: hidden;
+}
 
 /*Shop*/
 .home .shop {
@@ -76,7 +121,7 @@
     width: 100%;
     text-align: right;
 }
-.button button {
+.button .btn{
     margin-right: 30px;
     top: 30%;
     border-radius: 5px;
@@ -87,13 +132,14 @@
     line-height: 1.25;
     background: rgb(41, 122, 122);
     color: rgb(226,226,266);
-    position: relative;
+    margin-top: 3%;
+    margin-right: 30px;
     text-decoration: none;
     font-size: 14px;
     transition: background-color 0.6s ease;
     overflow: hidden;
 }
-.button button:after {
+.button .btn:after {
     content: "";
     position: absolute;
     width: 0;
@@ -106,10 +152,10 @@
     border-radius: 100%;
     transition: width 0.3s ease, height 0.3s ease;
 }
-.button button:focus, .button button:hover {
+.button .btn:focus, .button .btn:hover {
     background: rgb(61, 160, 160);
 }
-.button button:active:after {
+.button .btn:active:after {
     width: 200px;
     height: 200px;
 }
@@ -122,11 +168,17 @@
     .home .shop {
         margin-top: 28vh;
     }
+    .button .btn {
+        margin-top: 6.5%;
+    }
 }
 @media screen and (max-width: 768px){
     /*Shop*/
     .home .shop {
         margin-top: 18vh;
         height: 65vh;
+    }
+    .button .btn {
+        margin-top: 23%;
     }
 }
