--- a/css/home.css
+++ b/css/home.css
@@ -46,13 +46,13 @@
     text-align: center;
     margin-top: 2%;
 }
-.popup-content .btn {
+.popup-content .button {
     margin-left: 20px;
     text-align: right;
     align-items: center;
+    width: 100%;
 }
-.btn button {
-    margin-top: 8px;
+.popup-content .popup-btn {
     margin-right: 10px;
     border-radius: 5px;
     background: transparent;
