--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,68 +1,47 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+* {
+    margin: 0;
+    padding: 0;
 }
-body {
-    background-color: rgb(13, 39, 39);
-}
-html, body {
-    max-width: 100%;
-    overflow-x: hidden;
-}
-.img-area{
-    background-image: url("../assets/bg.jpg");
-    -webkit-background-size: cover;
-    background-size: cover;
-    background-position: center center;
-    height: 100vh;
-    position: fixed;
-    left: 0;
-    right: 0;
-    z-index: -1;
-    -webkit-filter: blur(10px);
-}
-.nav h1 {
-    padding-top: 30px;
-    color: rgb(226,226,266);
-    text-align: center;
-    font-family: 'Poppins', sans-serif;
-}
-.nav{
+.nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 5vh;
-    background-color: rgba(0, 0, 0, 0.486);
     font-family: 'Poppins', sans-serif;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 20px;
 }
-.logo{
-    color: rgb(226,226,266);
+.nav h4 {
+    color: rgb(43, 42, 42);
     letter-spacing: 3px;
     font-size: 20px;
+    /* background: -webkit-linear-gradient(45deg, rgb(75, 224, 120), rgb(63, 174, 207)); */
+    background-color: rgb(86, 211, 200);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
-.nav-links{
+.nav-links {
     display: flex;
-    text-decoration: none;
     width: 25%;
     justify-content: space-around;
 }
 .nav-links li {
     list-style: none;
-    color: rgb(226,226,266);
+}
+.nav-links a {
+    color: rgb(87, 87, 87);
     text-decoration: none;
     letter-spacing: 3px;
     font-weight: bold;
     font-size: 14px;
+    border-radius: 8px;
+    padding: 5px;
+    transition: 0.3s;
+}
+.nav-links a:hover {
+    color: rgb(87, 87, 87);
+    text-shadow: 3px 3px 7px rgba(27, 27, 27, 0.8);
 }
 
-.nav-links a {
-    color: rgb(226,226,266);
-    text-decoration: none;
-    letter-spacing: 3px;
-    font-weight: bold;
-    font-size: 14px;
-}
 .burger {
     display: none;
     cursor: pointer;
@@ -70,34 +49,38 @@ html, body {
 .burger div{
     width: 25px;
     height: 1px;
-    background-color: rgb(226,226,266);
+    background-color: rgb(61, 61, 61);
     margin: 5px;
 }
 
 @media screen and (max-width: 1024px){
     .nav-links{
-        display: flex;
-        text-decoration: none;
         width: 40%;
-        justify-content: space-around;
     }
 }
 @media screen and (max-width: 768px){
     .nav-links{
         position: absolute;
-            right: 0px;
-            height:95vh;
-            top: 5vh;
-            background-color: rgba(0, 0, 0, 0.7);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 100%;
-            transform: translateX(100%);
-            transition: transform 0.5s ease-in ;
+        right: 0px;
+        height:95vh;
+        top: 5vh;
+        background-color: rgba(0, 0, 0, 0.212);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in ;
     }
-    .nav-links li {
-        opacity: 0;
+    .nav-links a {
+        color: rgb(66, 66, 66);
+        text-decoration: none;
+        letter-spacing: 3px;
+        font-weight: bold;
+        font-size: 14px;
+        border-radius: 8px;
+        padding: 5px;
+        transition: 0.3s;
     }
     .burger{
         display: block;
